# BookmarQ

./: .gitignore  LICENSE  README.md  bookmarks.py  combined_bookmarks.csv  pyproject.toml  reddit_saved_posts_example.html  requirements.txt  twitter_bookmarks_example.csv  utils.py
Archive/bookmarq/: manage.py
Archive/bookmarq/bookmarq/: settings.py  urls.py  wsgi.py
Archive/bookmarq/templates/: _base.html  home.html
Archive/bookmarq/templates/account/: login.html  login_request_sent.html  signup.html
Archive/bookmarq/templates/cards/: bulk_delete_card.html  card_detail.html  create_card copy.html  create_card.html
Archive/bookmarq/templates/dashboard/: dashboard.html
Archive/bookmarq/templates/decks/: deck_detail.html  deck_list.html  review.html
Archive/bookmarq/users/: adapters.py  managers.py  views.py
bookmarq/bookmarq/: .env.sample  asgi.py
bookmarq/templates/account/: login_link.html  login_request.html
bookmarq/templates/cards/: card_confirm_delete.html  card_form.html  card_list.html  edit_card.html
bookmarq/templates/decks/: create_deck.html
bookmarq/users/: forms.py  models.py
bookmarq/users/scripts/: query.py
